sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: value -- is not a member of Int
var ecart:Int=getNombreValeurs--1
                              ^